--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#">Introduction</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">The Research</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#">Sources</a>
                             </li>
                         </ul>
                     </div>
@@ -41,7 +41,7 @@
 
                <!-- HERO SECTION-->
        <div class="px-4 py-5 mb-5 text-center bg-light">
-        <h1 class="display-5 fw-bold">The Impact of Video Games on individuals</h1>
+        <h1 class="display-5 fw-bold">The Impact of Video Games</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">A website about the effects of games</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
@@ -50,30 +50,35 @@
         </div>
     </div>
 
+    <section>
+      <header>Introduction</header>
+      <p>Video games are fun to play, especially with other people. But many questions linger on in the minds of many. Like are there any real benefits for playing long hours? What happens when the player plays too much? What role do video games play in the modern world? </p>
+      <h2 class="introduction">Why This Website Exists</h2>
+      <p class="introduction">This website is for a Web Development class project. The website's creation started on December 10th, 2021. It will discuss from the physical and mental effects of video games to how it impacted society.</p>
+      <p class="introduction"></p>
+    </section>
+
     <!-- THREE COLUMNS -->
     <div class="container text-center">
         <div class="row">
             <div class="col px-5 my-3">
-                <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                <h5>Column</h5>
+                <img src="img/images.jpeg">
             </div>
             <div class="col px-5 my-3">
-                    <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                    <h5>Column</h5>
+                    <img src="img/images (2).jpeg">
             </div>
             <div class="col px-5 my-3">
-                <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                <h5>Column</h5>
+                <img src="img/images (1).jpeg"> 
             </div>
         </div>
     </div>
 
-   <section>
-     <header class="introduction">Introduction</header>
-     <p class="introduction">This website is for a school project that began on December 10th, 2021. It will discuss from the physical and mental effects of video games to how it impacted society.</p>
-   </section>
-
+    <section class="research">
+      <header>The Research</header>
+    </section>
+    
    <!--Bootstrap-->
+   <div class="container">
    <div class="accordion" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -83,7 +88,7 @@
       </h2>
       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>The Benefits of Games.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
         </div>
       </div>
     </div>
@@ -99,19 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-          Accordion Item #3
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-        <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
 
    </body>
 </html>
