--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </h2>
       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
-          <strong>The Benefits of Games.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          Playing video games have shown a small improvement to many functions the brain performs. Basic hand-eye coordination and fine motor coordination have shown to be improved. Educational games can help grow math and reading skills and it inspire creativity. Strategy games allow for the use of speedy analysis, logistics, management, planning, and decision making. Playing simple games can help imrpove the player's mood by making them feel more relaxed. Multiplayer games enrourage cooperating and teamwork and those games can develop into virtual social communities. 
         </div>
       </div>
     </div>
@@ -100,11 +100,26 @@
       </h2>
       <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+         
         </div>
       </div>
     </div>
-</div>
+   </div>
+
+   <!--Infographic-->
+   <div class="infographic">
+     <h1>Video Games And Its Effects</h1>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+     <div>
+      <h2 class="positive">Positives</h2>
+       <ol>
+         <li> improving the brain</li>
+       </ol>
+      <h2 class="negaive">Negatives</h2>
+     </div>
+   </div>
 
    </body>
 </html>
