--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Introduction</a>
+                            <a class="nav-link" aria-current="page" href="#introduction">Introduction</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#">The Research</a>
+                            <a class="nav-link" href="#research">The Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Sources</a>
@@ -51,7 +51,7 @@
     </div>
 
     <section>
-      <header>Introduction</header>
+      <h1 id="introduction">Introduction</h1>
       <p>Video games are fun to play, especially with other people. But many questions linger on in the minds of many. Like are there any real benefits for playing long hours? What happens when the player plays too much? What role do video games play in the modern world? </p>
       <h2 class="introduction">Why This Website Exists</h2>
       <p class="introduction">This website is for a Web Development class project. The website's creation started on December 10th, 2021. It will discuss from the physical and mental effects of video games to how it impacted society.</p>
@@ -59,22 +59,15 @@
     </section>
 
     <!-- THREE COLUMNS -->
-    <div class="container text-center">
-        <div class="row">
-            <div class="col px-5 my-3">
-                <img src="img/images.jpeg">
-            </div>
-            <div class="col px-5 my-3">
-                    <img src="img/images (2).jpeg">
-            </div>
-            <div class="col px-5 my-3">
-                <img src="img/images (1).jpeg"> 
-            </div>
-        </div>
-    </div>
+    <img src="img/images.jpeg" class="img-fluid" alt="...">
+    <img src="img/images (1).jpeg" class="img-fluid" alt="..."> 
+    <img src="img/images (2).jpeg" class="img-fluid" alt="...">
+
+
 
     <section class="research">
-      <header>The Research</header>
+      <h1 id=research>The Research</h1>
+      <p>The three essential questions are: What good can video games do? What place do video games hold in a society? Do video games deserve to be blamed for violence in the world? After looking through scholarly websites, there are some answers to these questions. Below will discuss the physical and mental effects.</p>
     </section>
     
    <!--Bootstrap-->
@@ -100,26 +93,15 @@
       </h2>
       <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
         <div class="accordion-body">
-         
+          Playing too much can affect the player's mind by altering their behavior. Games can take a toll on a person's mental health. It can lead to a gaming addiction, depression, and it has a consistent correlation between violent games and aggression. There are also lots of negative stereotypes to anyone who plays daily.
         </div>
       </div>
     </div>
    </div>
 
-   <!--Infographic-->
-   <div class="infographic">
-     <h1>Video Games And Its Effects</h1>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-     <div>
-      <h2 class="positive">Positives</h2>
-       <ol>
-         <li> improving the brain</li>
-       </ol>
-      <h2 class="negaive">Negatives</h2>
-     </div>
-   </div>
+   
+  <!---->
+   
 
-   </body>
+  </body>
 </html>
