--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" aria-current="page" href="#introduction">Introduction</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="#research">The Research</a>
+                            <a class="nav-link" href="#research">Research</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Sources</a>
@@ -50,6 +50,12 @@
         </div>
     </div>
 
+    <!-- THREE COLUMNS -->
+    <img src="img/images.jpeg" class="img-fluid" alt="controller 1">
+    <img src="img/images (1).jpeg" class="img-fluid" alt="controller 2"> 
+    <img src="img/images (2).jpeg" class="img-fluid" alt="computer">
+    
+    <!--introduction-->
     <section>
       <h1 id="introduction">Introduction</h1>
       <p>Video games are fun to play, especially with other people. But many questions linger on in the minds of many. Like are there any real benefits for playing long hours? What happens when the player plays too much? What role do video games play in the modern world? </p>
@@ -58,50 +64,44 @@
       <p class="introduction"></p>
     </section>
 
-    <!-- THREE COLUMNS -->
-    <img src="img/images.jpeg" class="img-fluid" alt="...">
-    <img src="img/images (1).jpeg" class="img-fluid" alt="..."> 
-    <img src="img/images (2).jpeg" class="img-fluid" alt="...">
-
-
-
+    <!--research-->
     <section class="research">
-      <h1 id=research>The Research</h1>
+      <h1 id=research>Research</h1>
       <p>The three essential questions are: What good can video games do? What place do video games hold in a society? Do video games deserve to be blamed for violence in the world? After looking through scholarly websites, there are some answers to these questions. Below will discuss the physical and mental effects.</p>
+      <!--Bootstrap-->
+      <div class="container">
+        <div class="accordion" id="accordionPanelsStayOpenExample">
+         <div class="accordion-item">
+           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+               Positive Effects of Games
+             </button>
+           </h2>
+           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+             <div class="accordion-body">
+               Playing video games have shown a small improvement to many functions the brain performs. Basic hand-eye coordination and fine motor coordination have shown to be improved. Educational games can help grow math and reading skills and it inspire creativity. Strategy games allow for the use of speedy analysis, logistics, management, planning, and decision making. Playing simple games can help imrpove the player's mood by making them feel more relaxed. Multiplayer games enrourage cooperating and teamwork and those games can develop into virtual social communities. 
+             </div>
+           </div>
+         </div>
+         <div class="accordion-item">
+           <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+               Negative Effects of Games
+             </button>
+           </h2>
+           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+             <div class="accordion-body">
+               Playing too much can affect the player's mind by altering their behavior. Games can take a toll on a person's mental health. It can lead to a gaming addiction, depression, and it has a consistent correlation between violent games and aggression. There are also lots of negative stereotypes to anyone who plays daily.
+             </div>
+           </div>
+         </div>
+        </div>
+
+      <div class="display">
+        <h1 class="display-6">The Impact of Games</h1>
+        <p>The negative effects are mainly blamed when crimes are committed by teens and young adults. Many believe violent games can form aggresive behaviors that can make the individual mimicing those actions in real life.</p>
+      </div>
+
     </section>
-    
-   <!--Bootstrap-->
-   <div class="container">
-   <div class="accordion" id="accordionPanelsStayOpenExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-          Positive Effects of Games
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-        <div class="accordion-body">
-          Playing video games have shown a small improvement to many functions the brain performs. Basic hand-eye coordination and fine motor coordination have shown to be improved. Educational games can help grow math and reading skills and it inspire creativity. Strategy games allow for the use of speedy analysis, logistics, management, planning, and decision making. Playing simple games can help imrpove the player's mood by making them feel more relaxed. Multiplayer games enrourage cooperating and teamwork and those games can develop into virtual social communities. 
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-          Negative Effects of Games
-        </button>
-      </h2>
-      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-        <div class="accordion-body">
-          Playing too much can affect the player's mind by altering their behavior. Games can take a toll on a person's mental health. It can lead to a gaming addiction, depression, and it has a consistent correlation between violent games and aggression. There are also lots of negative stereotypes to anyone who plays daily.
-        </div>
-      </div>
-    </div>
-   </div>
-
-   
-  <!---->
-   
-
   </body>
 </html>
